--- a/css/home.css
+++ b/css/home.css
@@ -59,10 +59,9 @@ header.full-height > .jumbotron {
 #pearlHacks{
   color: white;
   letter-spacing: 2px;
-  font-size: 1.4em;
   position: absolute;;
   z-index: 4;
-  top: 20%;
+  top: 18%;
   width: 100%;
   height: 50%;
   text-align: center;
@@ -95,6 +94,7 @@ img#ariel{
   width: 50%;
   margin: auto;
   z-index: 5;
+  margin-top:1%;
   -webkit-animation: pulsate 2s ease-out;
  -webkit-animation-iteration-count: infinite;
 }
