--- a/css/home.css
+++ b/css/home.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4 {
 }
 
 strong {
-    font-size: 2em;
+    font-size: 1.7em;
     font-family: 'LMP', sans-serif;
     color: #ce4e6d;
     letter-spacing: 2px;
@@ -237,7 +237,7 @@ div#content.container
 }
 
 #welcome p{
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 
  p {
@@ -248,6 +248,13 @@ div#content.container
 
 .panel-body{
   font-size: 1.4rem;
+}
+
+#faq h2{
+  font-weight: bold;
+  text-shadow: 1px 1px black;
+  font-size: 1.9em;
+  color: #ce4e6d;
 }
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,900);
