--- a/css/pearlhacks.css
+++ b/css/pearlhacks.css
@@ -20,6 +20,7 @@ nav, p, h1, h2, h3, h4, h5, span, div {
 /* Images and color */
 body .jumbotron {
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
+  background: radial-gradient(#FAF0F1,#F5E0E4);
 }
 
 .navbar.hacknc-navbar, .panel.hacknc-navbar > .panel-heading {
