--- a/css/pearlhacks.css
+++ b/css/pearlhacks.css
@@ -90,24 +90,19 @@ body .jumbotron {
   font-size: 1em;
 }
 
+ul.dropdown-menu{
+  background: #02030A;
+}
+
+ul.dropdown-menu a{
+  color:white;
+}
+
+ul.dropdown-menu a:hover{
+  color:white;
+}
+
 /*panel-body #sponsors img{
   max-width:100%;
 max-height:100%;
 }*/
-
-.parking a{
-  color: #CE4E6D;
-  font-family: 'Didact Gothic';
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.parking a:hover{
-  text-shadow: 1px 1px black;
-  text-decoration: none;
-}
-
-.carpool li, .buspool li{
-  font-family: 'Didact Gothic';
-  font-size: inherit;
-}
