--- a/schedule/css/schedule.css
+++ b/schedule/css/schedule.css
@@ -1,7 +1,11 @@
-tr > td:nth-child(1), tr > td:nth-child(2) {
+tr > td:nth-child(1){
+	width: 22%;
+}
+
+tr > td:nth-child(2) {
 	width: 20%;
 }
 
 tr > td:nth-child(3){
-	width: 22%;
+	width: 24%;
 }
