--- a/css/home.css
+++ b/css/home.css
@@ -24,7 +24,7 @@
 body {
   font-family: 'LMP', sans-serif;
   font-size: 18px;
-  background: radial-gradient(#FBEFF2,white);
+  background: black;;
 }
 
 h1, h2, h3, h4 {
