--- a/css/home.css
+++ b/css/home.css
@@ -234,4 +234,42 @@ div#content.container
   color: #ce4e6d;
 }
 
+.pearlhacks-panel.FAQ_bubble {
+  width:100%;
+  border-radius:125px;
+}
+
+.FAQ_bubble {
+  padding: 32px
+}
+
+.FAQ_bubble .FAQ_hover_text {
+  padding:0px 0px 40px 0px;
+}
+
+.FAQ_bubble:hover {
+  background: #A28AC0;
+}
+
+.FAQ_text {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.FAQ_bubble:hover .FAQ_text {
+  display:none;
+}
+
+ .FAQ_hover_text {
+  display:none;
+  color: white;
+  font-size: 1rem;
+}
+
+.FAQ_bubble:hover .FAQ_hover_text {
+  display:initial;
+}
+
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,900);
