--- a/css/home.css
+++ b/css/home.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4 {
 strong {
     font-size: 1.7em;
     font-family: 'LMP', sans-serif;
-    color: #ce4e6d;
+    color: white;
     letter-spacing: 2px;
     line-height: 1em;
 }
@@ -53,7 +53,30 @@ header.full-height > .jumbotron {
   padding: 0;
   margin: 0;
   position: relative;
+  background:transparent;
 }
+
+/*.tintOverlay {
+  position: absolute;
+  content:" ";
+  opacity: 0;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display: block;
+  z-index:0;
+  background-color: rgb(165, 89, 89);
+}
+*/
+
+#frontPage {
+  background: url("../images/beach.png");
+  background-size: 100% 100%;
+  filter:saturate(100%);
+}
+}
+
 
 #pearlHacks{
   color: white;
@@ -87,11 +110,12 @@ header.full-height > .jumbotron {
 
 img#ariel{
   height: auto;
-  max-width: 250px;
+  max-width: 500px;
   width: 50%;
   margin: auto;
   z-index: 5;
-  margin-top:2%;
+  padding-top:15%;
+  display: block;
 }
 
   @media screen and (max-width: 500px) {
@@ -270,6 +294,23 @@ div#content.container
 
 .FAQ_bubble:hover .FAQ_hover_text {
   display:initial;
+}
+
+.leftHeader{
+  width: 700px;
+  height:80px;
+  margin-bottom: 20px;
+  margin-left: -40px;
+  text-align: center;
+  padding-top:1px;
+}
+
+.teal {
+  background: #81CFD3;
+}
+
+.purple {
+  background: #A28AC0;
 }
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,900);
