--- a/css/pearlhacks.css
+++ b/css/pearlhacks.css
@@ -26,7 +26,7 @@ body .jumbotron {
 
 /*this is the navigation bar color and text color*/
 .navbar.pearlhacks-navbar, .panel.pearlhacks-navbar > .panel-heading {
-  background: #02030A;
+  background: transparent;
   color: white;
 }
 
