--- a/css/home.css
+++ b/css/home.css
@@ -74,8 +74,14 @@ header.full-height > .jumbotron {
   background: url("../images/beach.png");
   background-size: 100% 100%;
   filter:saturate(100%);
+  margin-top: -60px;
+  margin-bottom:60px;
+  box-shadow: none;
 }
 
+#frontPage .jumbotron {
+  box-shadow: none;
+}
 
 #pearlHacks{
   color: white;
